--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="card-left">
                     <div class="card2">
                         <div>
-                            <img src="Images/icon1.png" alt="Weather icon">
+                            <img src="Images/icon1.png" alt="Weather icon" id="icon">
                         </div>
                         <div class="card2-text">
                             <div class="card2-title">
@@ -57,7 +57,7 @@
                             <div class="text">
                                 <p class="text-item">Feels like: <span id="feels_like">0</span> °C</p>
                                 <p class="text-item">Humidity: <span id="humidity">43</span> %</p>
-                                <p class="text-item">Wind Speed: <span id="wind_speed">3.6</span> m/s</p>
+                                <p class="text-item">Wind Speed: <span id="wind_speed">3.6</span> km/h</p>
                             </div>
                         </div>
                     </div>    
