Implemented the unit conversion

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                 <h3 class="text-title show-temp" id="temperature">23</h3>
                                 <!-- <h3 class="text-title hide-temp" id="temperature2"></h3> -->
                                 <div class="temp-links units">
-                                    <a href="#" id="celsius-btn" class="unitC"><span><strong>°C</strong></span></a> 
+                                    <a href="#" id="celsius-btn" class="unitC active"><span><strong>°C</strong></span></a> 
                                     <span>|</span>
                                     <a href="#" id="fahrenheit-btn" class="unitF"><span>°F</span></a>
                                 </div>
