--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="card-body">
                 <div class="card-right">
                     <div class="card1">
-                        <h1 class="card1-title">Kyiv</h1>
+                        <h1 class="card1-title"></h1>
                         <div class="card1-items">
                             <h2 class="card1-text current-date">Monday 12:34</h2>
                             <p class="card1-text" id="description">Cloudy</p>
@@ -42,11 +42,11 @@
                 <div class="card-left">
                     <div class="card2">
                         <div>
-                            <img src="Images/icon1.png" alt="Weather icon" id="icon">
+                            <img src="#" alt="Weather icon" id="icon">
                         </div>
                         <div class="card2-text">
                             <div class="card2-title">
-                                <h3 class="text-title show-temp" id="temperature">23</h3>
+                                <h3 class="text-title show-temp" id="temperature"></h3>
                                 <!-- <h3 class="text-title hide-temp" id="temperature2"></h3> -->
                                 <div class="temp-links units">
                                     <a href="#" id="celsius-btn" class="unitC active"><span><strong>°C</strong></span></a> 
@@ -65,7 +65,7 @@
             </div>
     
     
-            <div class="carousel">
+            <!-- <div class="carousel"> -->
                 <div class="carousel-items">
                     <div class="carousel-item carousel-item1">
                         <p class="item-header"><strong>Tue</strong></p>
@@ -82,18 +82,18 @@
                         <img src="Images/icon4.png" alt="Weather icon" class="item-icon">
                         <p class="item-footer"><strong>22°C</strong></p>
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item carousel-item-hide">
                         <p class="item-header"><strong>Fri</strong></p>
                         <img src="Images/icon5.png" alt="Weather icon" class="item-icon">
                         <p class="item-footer"><strong>26°C</strong></p>
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item carousel-item-hide">
                         <p class="item-header"><strong>Sat</strong></p>
                         <img src="Images/icon6.png" alt="Weather icon" class="item-icon">
                         <p class="item-footer"><strong>24°C</strong></p>
                     </div>
                 </div>
-            </div>
+            <!-- </div> -->
         </div>
         <div>
             <p class="open-source">
