Week 8 (add code)

--- a/index.html
+++ b/index.html
@@ -63,51 +63,53 @@
                     </div>    
                 </div>
             </div>
+
+            <div class="weather-forecast" id="forecast"></div>
     
-            <div class="weather-forecast">
+            <!-- <div class="weather-forecast">
                 <div class="carousel-items">
-                    <div class="carousel-item carousel-item1">
-                        <div class="weather-forecast-date"><strong>Tue</strong></div>
+                    <div class="weather-forecast item1" id="forecast">
+                        <h4 class="weather-forecast-date" id="forecast-date"><strong>Tue</strong></h4>
                         <img src="#" alt="Weather icon" class="item-icon" width="50">
                         <div class="weather-forecast-temperatures">
-                            <span class="weather-forecast-temperature-max"> 18° </span>
-                            <span class="weather-forecast-temperature-min"> 12° </span>
+                            <span class="weather-forecast-temperature-max" id="temp-max"> 18° </span>
+                            <span class="weather-forecast-temperature-min" id="temp-min"> 12° </span>
                         </div>
                     </div>
-                    <div class="carousel-item">
-                        <div class="weather-forecast-date"><strong>Wed</strong></div>
+                    <div class="weather-forecast" id="forecast">
+                        <h4 class="weather-forecast-date" id="forecast-date"><strong>Tue</strong></h4>
                         <img src="#" alt="Weather icon" class="item-icon" width="50">
                         <div class="weather-forecast-temperatures">
-                            <span class="weather-forecast-temperature-max"> 18° </span>
-                            <span class="weather-forecast-temperature-min"> 12° </span>
+                            <span class="weather-forecast-temperature-max" id="temp-max"> 18° </span>
+                            <span class="weather-forecast-temperature-min" id="temp-min"> 12° </span>
                         </div>
                     </div>
-                    <div class="carousel-item">
-                        <div class="weather-forecast-date"><strong>Thu</strong></div>
+                    <div class="weather-forecast" id="forecast">
+                        <h4 class="weather-forecast-date" id="forecast-date"><strong>Tue</strong></h4>
                         <img src="#" alt="Weather icon" class="item-icon" width="50">
                         <div class="weather-forecast-temperatures">
-                            <span class="weather-forecast-temperature-max"> 18° </span>
-                            <span class="weather-forecast-temperature-min"> 12° </span>
+                            <span class="weather-forecast-temperature-max" id="temp-max"> 18° </span>
+                            <span class="weather-forecast-temperature-min" id="temp-min"> 12° </span>
                         </div>
                     </div>
-                    <div class="carousel-item carousel-item-hide">
-                        <div class="weather-forecast-date"><strong>Fri</strong></div>
+                    <div class="weather-forecast item-hide" id="forecast">
+                        <h4 class="weather-forecast-date" id="forecast-date"><strong>Tue</strong></h4>
                         <img src="#" alt="Weather icon" class="item-icon" width="50">
                         <div class="weather-forecast-temperatures">
-                            <span class="weather-forecast-temperature-max"> 18° </span>
-                            <span class="weather-forecast-temperature-min"> 12° </span>
+                            <span class="weather-forecast-temperature-max" id="temp-max"> 18° </span>
+                            <span class="weather-forecast-temperature-min" id="temp-min"> 12° </span>
                         </div>
                     </div>
-                    <div class="carousel-item carousel-item-hide">
-                        <div class="weather-forecast-date"><strong>Sat</strong></div>
+                    <div class="weather-forecast item-hide" id="forecast">
+                        <h4 class="weather-forecast-date" id="forecast-date"><strong>Tue</strong></h4>
                         <img src="#" alt="Weather icon" class="item-icon" width="50">
                         <div class="weather-forecast-temperatures">
-                            <span class="weather-forecast-temperature-max"> 18° </span>
-                            <span class="weather-forecast-temperature-min"> 12° </span>
+                            <span class="weather-forecast-temperature-max" id="temp-max"> 18° </span>
+                            <span class="weather-forecast-temperature-min" id="temp-min"> 12° </span>
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
         <div>
             <p class="open-source">
