--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,300&display=swap" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="src/style.css">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
@@ -47,7 +53,6 @@
                         <div class="card2-text">
                             <div class="card2-title">
                                 <h3 class="text-title show-temp" id="temperature"></h3>
-                                <!-- <h3 class="text-title hide-temp" id="temperature2"></h3> -->
                                 <div class="temp-links units">
                                     <a href="#" id="celsius-btn" class="unitC active"><span><strong>°C</strong></span></a> 
                                     <span>|</span>
