Pre final updates added

--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
     <title>Homework</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,300&display=swap" rel="stylesheet">
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
     <link rel="stylesheet" href="src/style.css">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
@@ -71,50 +68,6 @@
 
             <div class="weather-forecast" id="forecast"></div>
     
-            <!-- <div class="weather-forecast">
-                <div class="carousel-items">
-                    <div class="weather-forecast item1" id="forecast">
-                        <h4 class="weather-forecast-date" id="forecast-date"><strong>Tue</strong></h4>
-                        <img src="#" alt="Weather icon" class="item-icon" width="50">
-                        <div class="weather-forecast-temperatures">
-                            <span class="weather-forecast-temperature-max" id="temp-max"> 18° </span>
-                            <span class="weather-forecast-temperature-min" id="temp-min"> 12° </span>
-                        </div>
-                    </div>
-                    <div class="weather-forecast" id="forecast">
-                        <h4 class="weather-forecast-date" id="forecast-date"><strong>Tue</strong></h4>
-                        <img src="#" alt="Weather icon" class="item-icon" width="50">
-                        <div class="weather-forecast-temperatures">
-                            <span class="weather-forecast-temperature-max" id="temp-max"> 18° </span>
-                            <span class="weather-forecast-temperature-min" id="temp-min"> 12° </span>
-                        </div>
-                    </div>
-                    <div class="weather-forecast" id="forecast">
-                        <h4 class="weather-forecast-date" id="forecast-date"><strong>Tue</strong></h4>
-                        <img src="#" alt="Weather icon" class="item-icon" width="50">
-                        <div class="weather-forecast-temperatures">
-                            <span class="weather-forecast-temperature-max" id="temp-max"> 18° </span>
-                            <span class="weather-forecast-temperature-min" id="temp-min"> 12° </span>
-                        </div>
-                    </div>
-                    <div class="weather-forecast item-hide" id="forecast">
-                        <h4 class="weather-forecast-date" id="forecast-date"><strong>Tue</strong></h4>
-                        <img src="#" alt="Weather icon" class="item-icon" width="50">
-                        <div class="weather-forecast-temperatures">
-                            <span class="weather-forecast-temperature-max" id="temp-max"> 18° </span>
-                            <span class="weather-forecast-temperature-min" id="temp-min"> 12° </span>
-                        </div>
-                    </div>
-                    <div class="weather-forecast item-hide" id="forecast">
-                        <h4 class="weather-forecast-date" id="forecast-date"><strong>Tue</strong></h4>
-                        <img src="#" alt="Weather icon" class="item-icon" width="50">
-                        <div class="weather-forecast-temperatures">
-                            <span class="weather-forecast-temperature-max" id="temp-max"> 18° </span>
-                            <span class="weather-forecast-temperature-min" id="temp-min"> 12° </span>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
         </div>
         <div>
             <p class="open-source">
