Add JS Quick Search by city in header

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div class="container">
             <div class="header">
                 <p>
-                    <a href="https://www.google.com/search?q=weather+kyiv" target="_blank" class="city">Kyiv</a>
-                    <a href="https://www.google.com/search?q=weather+paris" target="_blank" class="city">Paris</a>
-                    <a href="https://www.google.com/search?q=weather+new+york" target="_blank" class="city">New York</a>
-                    <a href="https://www.google.com/search?q=weather+berlin" target="_blank" class="city">Berlin</a>
+                    <a href="https://www.google.com/search?q=weather+kyiv" target="_blank" class="city" id="quick-search_berlin">Berlin</a>
+                    <a href="https://www.google.com/search?q=weather+paris" target="_blank" class="city" id="quick-search_paris">Paris</a>
+                    <a href="https://www.google.com/search?q=weather+new+york" target="_blank" class="city" id="quick-search_newyork">New York</a>
+                    <a href="https://www.google.com/search?q=weather+berlin" target="_blank" class="city" id="quick-search_sydney">Sydney</a>
                 </p>
             </div>
     
