--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div class="container">
             <div class="header">
                 <p>
-                    <a href="https://www.google.com/search?q=weather+kyiv" target="_blank" class="city" id="quick-search_berlin">Berlin</a>
-                    <a href="https://www.google.com/search?q=weather+paris" target="_blank" class="city" id="quick-search_paris">Paris</a>
-                    <a href="https://www.google.com/search?q=weather+new+york" target="_blank" class="city" id="quick-search_newyork">New York</a>
-                    <a href="https://www.google.com/search?q=weather+berlin" target="_blank" class="city" id="quick-search_sydney">Sydney</a>
+                    <a href="https://www.google.com/search?q=weather+kyiv" class="city" id="quick-search_berlin">Berlin</a>
+                    <a href="https://www.google.com/search?q=weather+paris" class="city" id="quick-search_paris">Paris</a>
+                    <a href="https://www.google.com/search?q=weather+new+york" class="city" id="quick-search_newyork">New York</a>
+                    <a href="https://www.google.com/search?q=weather+berlin" class="city" id="quick-search_sydney">Sydney</a>
                 </p>
             </div>
     
@@ -37,8 +37,8 @@
                     <div class="card1">
                         <h1 class="card1-title"></h1>
                         <div class="card1-items">
-                            <h2 class="card1-text current-date">Monday 12:34</h2>
-                            <p class="card1-text" id="description">Cloudy</p>
+                            <h2 class="card1-text current-date"></h2>
+                            <p class="card1-text" id="description"></p>
                         </div>
                     </div>
                 </div>    
@@ -57,9 +57,9 @@
                                 </div>
                             </div>
                             <div class="text">
-                                <p class="text-item">Feels like: <span id="feels_like">0</span> °C</p>
-                                <p class="text-item">Humidity: <span id="humidity">43</span> %</p>
-                                <p class="text-item">Wind Speed: <span id="wind_speed">3.6</span> km/h</p>
+                                <p class="text-item">Feels like: <span id="feels_like"></span> °C</p>
+                                <p class="text-item">Humidity: <span id="humidity"></span> %</p>
+                                <p class="text-item">Wind Speed: <span id="wind_speed"></span> km/h</p>
                             </div>
                         </div>
                     </div>    
@@ -75,6 +75,6 @@
             </p>
         </div>
     </div>
-    <script src="src/index.js"></script>
+    <script src="src/script.js"></script>
 </body>
 </html>
